# jni-lxc

./: LICENSE  README.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts
app/src/main/aidl/io/github/coap/: IService.aidl
app/src/main/java/io/github/coap/: MainActivity.java
app/src/main/java/io/github/coap/lxc/: LxcContainer.java  LxcManager.java  LxcNative.java
app/src/main/jni/: CMakeLists.txt
app/src/main/jni/jni/: Android.mk  Application.mk
app/src/main/jni/src/: jni-wrapper.c  jni-wrapper.h  lxc-binding.c  lxc-binding.h
app/src/main/jni/src/include/lxc/: version.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
